# postmarketos-backup

./: meson.build
data/: meson.build  org.postmarketos.Backup.appdata.xml  org.postmarketos.Backup.desktop  org.postmarketos.Backup.policy
pmos_backup/: __main__.py  backup.gresource  backup.gresource.xml  backupinfo.py  meson.build  pmos-backup-gui.in  pmos-backup.in  state.py  window.py
pmos_backup/ui/: backup.glade
