install_data('org.postmarketos.Backup.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
)

install_data(['org.postmarketos.Backup.appdata.xml'],
             install_dir : get_option('datadir') / 'metainfo')

install_data('org.postmarketos.Backup.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data('org.postmarketos.Backup.policy',
  install_dir: join_paths(get_option('datadir'), 'polkit-1/actions')
)

